# face-recognition

./: .gitignore  README.md  TODO  configure.ac
src/: Makefile.am
src/app/: Makefile.am  ns_test.cpp
src/core/: Makefile.am
src/net/: Makefile.am
src/opencv/: Makefile.am
